samples showcase source code from https://www.smartclient.com/builds/SmartGWT/13.0p/LGPL/latest/smartgwt-13.0p.zip